data cleaning finished

--- a/notebooks/1.0_ego_c02_cleaning_data.ipynb
+++ b/notebooks/1.0_ego_c02_cleaning_data.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "ae6d0db0-4c7b-4ded-b92a-9319dde7ad8d",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 62,
    "id": "7b377317-8c69-476a-bf21-e7f161299616",
    "metadata": {},
    "outputs": [],
@@ -73,15 +73,17 @@
     "# size_number\n",
     "data_raw['size_number'] = data_raw['size'].str.extract('(\\d+/\\\\d+)')\n",
     "\n",
-    "# Remove Size\n",
-    "data_raw = data_raw.drop(columns = ['size'], axis = 1)\n",
-    "\n",
     "# ============================== Composition ============================== #\n",
     "# For the first cycle, exclude secondary compositions\n",
     "data_raw = data_raw[~data_raw['composition'].str.contains('Pocket lining:', na = False)]\n",
     "data_raw = data_raw[~data_raw['composition'].str.contains('Pocket:', na = False)]\n",
     "data_raw = data_raw[~data_raw['composition'].str.contains('Lining:', na = False)]\n",
     "data_raw = data_raw[~data_raw['composition'].str.contains('Shell:', na = False)]\n",
+    "\n",
+    "# Drop duplicates\n",
+    "data_raw = data_raw.drop_duplicates(subset = ['product_id', 'product_category', 'product_name', 'product_price',\n",
+    "                                              'scrapy_datetime', 'style_code', 'color_id', 'color_name', 'fit'], keep = 'last')\n",
+    "# Reset Index\n",
     "data_raw = data_raw.reset_index(drop = True)\n",
     "\n",
     "# Break composition by comma and create a new DataSet\n",
@@ -95,24 +97,30 @@
     "data_cotton.name = 'cotton'\n",
     "data_composition_ref = pd.concat([data_composition_ref, data_cotton], axis = 1)\n",
     "data_composition_ref = data_composition_ref.iloc[:, ~data_composition_ref.columns.duplicated(keep = 'last')]\n",
+    "data_composition_ref['cotton'] = data_composition_ref['cotton'].fillna('Cotton 0%')\n",
     "\n",
     "# polyester\n",
     "data_polyester = data_composition.loc[data_composition[1].str.contains('Polyester', na = True), 1]\n",
     "data_polyester.name = 'polyester'\n",
     "data_composition_ref = pd.concat([data_composition_ref, data_polyester], axis = 1)\n",
     "data_composition_ref = data_composition_ref.iloc[:, ~data_composition_ref.columns.duplicated(keep = 'last')]\n",
+    "data_composition_ref['polyester'] = data_composition_ref['polyester'].fillna('Polyester 0%')\n",
     "\n",
     "# elastane \n",
     "data_elastane = data_composition.loc[data_composition[1].str.contains('Elastane', na = True), 1]\n",
     "data_elastane.name = 'elastane'\n",
+    "# Combine Elastane from both columns 1 and 2\n",
+    "data_elastane = data_elastane.combine_first(data_composition[2])\n",
     "data_composition_ref = pd.concat([data_composition_ref, data_elastane], axis = 1)\n",
     "data_composition_ref = data_composition_ref.iloc[:, ~data_composition_ref.columns.duplicated(keep = 'last')]\n",
+    "data_composition_ref['elastane'] = data_composition_ref['elastane'].fillna('Elastane 0%')\n",
     "\n",
     "# elasterell\n",
     "data_elasterell = data_composition.loc[data_composition[1].str.contains('Elasterell', na = True), 1]\n",
     "data_elasterell.name = 'elasterell'\n",
     "data_composition_ref = pd.concat([data_composition_ref, data_elasterell], axis = 1)\n",
     "data_composition_ref = data_composition_ref.iloc[:, ~data_composition_ref.columns.duplicated(keep = 'last')]\n",
+    "data_composition_ref['elasterell'] = data_composition_ref['elasterell'].fillna('Elasterell-P 0%')\n",
     "\n",
     "# ============================== Join with Data Raw ============================== #\n",
     "data_raw = pd.concat([data_raw, data_composition_ref], axis = 1)\n",
@@ -121,12 +129,18 @@
     "data_raw['cotton'] = data_raw['cotton'].apply(lambda x: int(re.search('\\d+', x).group(0))/100 if pd.notnull(x) else x)\n",
     "data_raw['polyester'] = data_raw['polyester'].apply(lambda x: int(re.search('\\d+', x).group(0))/100 if pd.notnull(x) else x)\n",
     "data_raw['elastane'] = data_raw['elastane'].apply(lambda x: int(re.search('\\d+', x).group(0))/100 if pd.notnull(x) else x)\n",
-    "data_raw['elasterell'] = data_raw['elasterell'].apply(lambda x: int(re.search('\\d+', x).group(0))/100 if pd.notnull(x) else x)"
+    "data_raw['elasterell'] = data_raw['elasterell'].apply(lambda x: int(re.search('\\d+', x).group(0))/100 if pd.notnull(x) else x)\n",
+    "\n",
+    "# Drop unused columns\n",
+    "data_raw = data_raw.drop(columns = ['size', 'composition'], axis = 1)\n",
+    "\n",
+    "# Drop duplicates\n",
+    "data_raw = data_raw.drop_duplicates()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 72,
    "id": "06b57859-3d5f-40c3-bcf7-0b7d290e1e1d",
    "metadata": {},
    "outputs": [
@@ -160,7 +174,6 @@
        "      <th>color_id</th>\n",
        "      <th>color_name</th>\n",
        "      <th>fit</th>\n",
-       "      <th>composition</th>\n",
        "      <th>size_model</th>\n",
        "      <th>size_number</th>\n",
        "      <th>cotton</th>\n",
@@ -171,26 +184,169 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2395</th>\n",
-       "      <td>636207010</td>\n",
+       "      <th>180</th>\n",
+       "      <td>751994024</td>\n",
        "      <td>men_jeans_slim</td>\n",
        "      <td>slim_jeans</td>\n",
-       "      <td>19.99</td>\n",
+       "      <td>29.99</td>\n",
        "      <td>2021-09-30 09:51:16</td>\n",
-       "      <td>636207</td>\n",
-       "      <td>10</td>\n",
-       "      <td>dark_gray_denim</td>\n",
+       "      <td>751994</td>\n",
+       "      <td>24</td>\n",
+       "      <td>light_gray</td>\n",
        "      <td>slim_fit</td>\n",
-       "      <td>Cotton 89%, Polyester 10%, Elastane 1%</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>0.89</td>\n",
-       "      <td>0.1</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.98</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.02</td>\n",
+       "      <td>0.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>62</th>\n",
+       "      <th>390</th>\n",
+       "      <td>720504013</td>\n",
+       "      <td>men_jeans_skinny</td>\n",
+       "      <td>skinny_jeans</td>\n",
+       "      <td>24.99</td>\n",
+       "      <td>2021-09-30 09:51:16</td>\n",
+       "      <td>720504</td>\n",
+       "      <td>13</td>\n",
+       "      <td>light_blue</td>\n",
+       "      <td>skinny_fit</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.73</td>\n",
+       "      <td>0.26</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>136</th>\n",
+       "      <td>730863033</td>\n",
+       "      <td>men_jeans_skinny</td>\n",
+       "      <td>skinny_jeans</td>\n",
+       "      <td>29.99</td>\n",
+       "      <td>2021-09-30 09:51:16</td>\n",
+       "      <td>730863</td>\n",
+       "      <td>33</td>\n",
+       "      <td>graphite_gray</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>411</th>\n",
+       "      <td>751994018</td>\n",
+       "      <td>men_jeans_slim</td>\n",
+       "      <td>slim_jeans</td>\n",
+       "      <td>29.99</td>\n",
+       "      <td>2021-09-30 09:51:16</td>\n",
+       "      <td>751994</td>\n",
+       "      <td>18</td>\n",
+       "      <td>black_denim</td>\n",
+       "      <td>slim_fit</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.98</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.02</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>690449022</td>\n",
+       "      <td>men_jeans_ripped</td>\n",
+       "      <td>skinny_jeans</td>\n",
+       "      <td>39.99</td>\n",
+       "      <td>2021-09-30 09:51:16</td>\n",
+       "      <td>690449</td>\n",
+       "      <td>22</td>\n",
+       "      <td>denim_blue</td>\n",
+       "      <td>skinny_fit</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.98</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.02</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>109</th>\n",
+       "      <td>814631006</td>\n",
+       "      <td>men_jeans_slim</td>\n",
+       "      <td>freefit®_slim_jeans</td>\n",
+       "      <td>49.99</td>\n",
+       "      <td>2021-09-30 09:51:16</td>\n",
+       "      <td>814631</td>\n",
+       "      <td>6</td>\n",
+       "      <td>gray</td>\n",
+       "      <td>slim_fit</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.90</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.02</td>\n",
+       "      <td>0.08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>207</th>\n",
+       "      <td>814631002</td>\n",
+       "      <td>men_jeans_slim</td>\n",
+       "      <td>freefit®_slim_jeans</td>\n",
+       "      <td>49.99</td>\n",
+       "      <td>2021-09-30 09:51:16</td>\n",
+       "      <td>814631</td>\n",
+       "      <td>2</td>\n",
+       "      <td>black_no_fade_black</td>\n",
+       "      <td>slim_fit</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.90</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.02</td>\n",
+       "      <td>0.08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>280</th>\n",
+       "      <td>730863005</td>\n",
+       "      <td>men_jeans_skinny</td>\n",
+       "      <td>skinny_jeans</td>\n",
+       "      <td>29.99</td>\n",
+       "      <td>2021-09-30 09:51:16</td>\n",
+       "      <td>730863</td>\n",
+       "      <td>5</td>\n",
+       "      <td>dark_blue</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>92</th>\n",
+       "      <td>1004476002</td>\n",
+       "      <td>men_jeans_slim</td>\n",
+       "      <td>freefit®_slim_jeans</td>\n",
+       "      <td>49.99</td>\n",
+       "      <td>2021-09-30 09:51:16</td>\n",
+       "      <td>1004476</td>\n",
+       "      <td>2</td>\n",
+       "      <td>light_denim_blue</td>\n",
+       "      <td>slim_fit</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.90</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.02</td>\n",
+       "      <td>0.08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
        "      <td>690449043</td>\n",
        "      <td>men_jeans_ripped</td>\n",
        "      <td>skinny_jeans</td>\n",
@@ -198,135 +354,76 @@
        "      <td>2021-09-30 09:51:16</td>\n",
        "      <td>690449</td>\n",
        "      <td>43</td>\n",
-       "      <td>light_denim_gray_trashed</td>\n",
-       "      <td>skinny_fit</td>\n",
-       "      <td>Cotton 98%, Elastane 2%</td>\n",
-       "      <td>184</td>\n",
-       "      <td>31/32</td>\n",
-       "      <td>0.98</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.02</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2609</th>\n",
-       "      <td>636207015</td>\n",
-       "      <td>men_jeans_slim</td>\n",
-       "      <td>slim_jeans</td>\n",
-       "      <td>19.99</td>\n",
-       "      <td>2021-09-30 09:51:16</td>\n",
-       "      <td>636207</td>\n",
-       "      <td>15</td>\n",
-       "      <td>dark_denim_blue</td>\n",
-       "      <td>slim_fit</td>\n",
-       "      <td>Cotton 88%, Polyester 10%, Elastane 2%</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.88</td>\n",
-       "      <td>0.1</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1590</th>\n",
-       "      <td>636207011</td>\n",
-       "      <td>men_jeans_slim</td>\n",
-       "      <td>slim_jeans</td>\n",
-       "      <td>19.99</td>\n",
-       "      <td>2021-09-30 09:51:16</td>\n",
-       "      <td>636207</td>\n",
-       "      <td>11</td>\n",
-       "      <td>gray</td>\n",
-       "      <td>slim_fit</td>\n",
-       "      <td>Cotton 89%, Polyester 10%, Elastane 1%</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.89</td>\n",
-       "      <td>0.1</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2300</th>\n",
-       "      <td>811993031</td>\n",
-       "      <td>men_jeans_regular</td>\n",
-       "      <td>regular_jeans</td>\n",
-       "      <td>29.99</td>\n",
-       "      <td>2021-09-30 09:51:16</td>\n",
-       "      <td>811993</td>\n",
-       "      <td>31</td>\n",
        "      <td>denim_blue</td>\n",
-       "      <td>regular_fit</td>\n",
-       "      <td>Cotton 98%, Elastane 2%</td>\n",
+       "      <td>skinny_fit</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>0.98</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.00</td>\n",
        "      <td>0.02</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.00</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "      product_id   product_category   product_name  product_price  \\\n",
-       "2395   636207010     men_jeans_slim     slim_jeans          19.99   \n",
-       "62     690449043   men_jeans_ripped   skinny_jeans          39.99   \n",
-       "2609   636207015     men_jeans_slim     slim_jeans          19.99   \n",
-       "1590   636207011     men_jeans_slim     slim_jeans          19.99   \n",
-       "2300   811993031  men_jeans_regular  regular_jeans          29.99   \n",
+       "     product_id  product_category         product_name  product_price  \\\n",
+       "180   751994024    men_jeans_slim           slim_jeans          29.99   \n",
+       "390   720504013  men_jeans_skinny         skinny_jeans          24.99   \n",
+       "136   730863033  men_jeans_skinny         skinny_jeans          29.99   \n",
+       "411   751994018    men_jeans_slim           slim_jeans          29.99   \n",
+       "1     690449022  men_jeans_ripped         skinny_jeans          39.99   \n",
+       "109   814631006    men_jeans_slim  freefit®_slim_jeans          49.99   \n",
+       "207   814631002    men_jeans_slim  freefit®_slim_jeans          49.99   \n",
+       "280   730863005  men_jeans_skinny         skinny_jeans          29.99   \n",
+       "92   1004476002    men_jeans_slim  freefit®_slim_jeans          49.99   \n",
+       "16    690449043  men_jeans_ripped         skinny_jeans          39.99   \n",
        "\n",
-       "         scrapy_datetime  style_code  color_id                color_name  \\\n",
-       "2395 2021-09-30 09:51:16      636207        10           dark_gray_denim   \n",
-       "62   2021-09-30 09:51:16      690449        43  light_denim_gray_trashed   \n",
-       "2609 2021-09-30 09:51:16      636207        15           dark_denim_blue   \n",
-       "1590 2021-09-30 09:51:16      636207        11                      gray   \n",
-       "2300 2021-09-30 09:51:16      811993        31                denim_blue   \n",
+       "        scrapy_datetime  style_code  color_id           color_name  \\\n",
+       "180 2021-09-30 09:51:16      751994        24           light_gray   \n",
+       "390 2021-09-30 09:51:16      720504        13           light_blue   \n",
+       "136 2021-09-30 09:51:16      730863        33        graphite_gray   \n",
+       "411 2021-09-30 09:51:16      751994        18          black_denim   \n",
+       "1   2021-09-30 09:51:16      690449        22           denim_blue   \n",
+       "109 2021-09-30 09:51:16      814631         6                 gray   \n",
+       "207 2021-09-30 09:51:16      814631         2  black_no_fade_black   \n",
+       "280 2021-09-30 09:51:16      730863         5            dark_blue   \n",
+       "92  2021-09-30 09:51:16     1004476         2     light_denim_blue   \n",
+       "16  2021-09-30 09:51:16      690449        43           denim_blue   \n",
        "\n",
-       "              fit                             composition size_model  \\\n",
-       "2395     slim_fit  Cotton 89%, Polyester 10%, Elastane 1%        NaN   \n",
-       "62     skinny_fit                 Cotton 98%, Elastane 2%        184   \n",
-       "2609     slim_fit  Cotton 88%, Polyester 10%, Elastane 2%        NaN   \n",
-       "1590     slim_fit  Cotton 89%, Polyester 10%, Elastane 1%        NaN   \n",
-       "2300  regular_fit                 Cotton 98%, Elastane 2%        NaN   \n",
+       "            fit size_model size_number  cotton  polyester  elastane  \\\n",
+       "180    slim_fit        NaN         NaN    0.98       0.00      0.02   \n",
+       "390  skinny_fit        NaN         NaN    0.73       0.26      0.01   \n",
+       "136         NaN        NaN         NaN    0.00       0.00      0.00   \n",
+       "411    slim_fit        NaN         NaN    0.98       0.00      0.02   \n",
+       "1    skinny_fit        NaN         NaN    0.98       0.00      0.02   \n",
+       "109    slim_fit        NaN         NaN    0.90       0.00      0.02   \n",
+       "207    slim_fit        NaN         NaN    0.90       0.00      0.02   \n",
+       "280         NaN        NaN         NaN    0.00       0.00      0.00   \n",
+       "92     slim_fit        NaN         NaN    0.90       0.00      0.02   \n",
+       "16   skinny_fit        NaN         NaN    0.98       0.00      0.02   \n",
        "\n",
-       "     size_number  cotton  polyester  elastane  elasterell  \n",
-       "2395         NaN    0.89        0.1       NaN         NaN  \n",
-       "62         31/32    0.98        NaN      0.02         NaN  \n",
-       "2609         NaN    0.88        0.1       NaN         NaN  \n",
-       "1590         NaN    0.89        0.1       NaN         NaN  \n",
-       "2300         NaN    0.98        NaN      0.02         NaN  "
+       "     elasterell  \n",
+       "180        0.00  \n",
+       "390        0.00  \n",
+       "136        0.00  \n",
+       "411        0.00  \n",
+       "1          0.00  \n",
+       "109        0.08  \n",
+       "207        0.08  \n",
+       "280        0.00  \n",
+       "92         0.08  \n",
+       "16         0.00  "
       ]
      },
-     "execution_count": 65,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data_raw.sample(5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 63,
-   "id": "81669690-b700-436a-8bcd-9daabde08712",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(2776, 16)"
-      ]
-     },
-     "execution_count": 63,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data_raw.shape"
+    "data_raw.sample(10)"
    ]
   }
  ],
