--- a/notebooks/1.0_ego_c02_cleaning_data.ipynb
+++ b/notebooks/1.0_ego_c02_cleaning_data.ipynb
@@ -10,19 +10,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "id": "ae6d0db0-4c7b-4ded-b92a-9319dde7ad8d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import requests\n",
     "import re\n",
     "\n",
     "import pandas as pd\n",
     "import numpy  as np\n",
     "\n",
-    "from datetime import datetime\n",
-    "from bs4      import BeautifulSoup"
+    "from datetime import datetime"
    ]
   },
   {
@@ -35,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 10,
    "id": "7b377317-8c69-476a-bf21-e7f161299616",
    "metadata": {},
    "outputs": [],
@@ -140,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 11,
    "id": "06b57859-3d5f-40c3-bcf7-0b7d290e1e1d",
    "metadata": {},
    "outputs": [
@@ -184,43 +182,61 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>180</th>\n",
-       "      <td>751994024</td>\n",
-       "      <td>men_jeans_slim</td>\n",
-       "      <td>slim_jeans</td>\n",
+       "      <th>221</th>\n",
+       "      <td>811993024</td>\n",
+       "      <td>men_jeans_regular</td>\n",
+       "      <td>regular_jeans</td>\n",
        "      <td>29.99</td>\n",
        "      <td>2021-09-30 09:51:16</td>\n",
-       "      <td>751994</td>\n",
+       "      <td>811993</td>\n",
        "      <td>24</td>\n",
-       "      <td>light_gray</td>\n",
-       "      <td>slim_fit</td>\n",
+       "      <td>dark_blue</td>\n",
+       "      <td>regular_fit</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>0.98</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.02</td>\n",
-       "      <td>0.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>390</th>\n",
-       "      <td>720504013</td>\n",
-       "      <td>men_jeans_skinny</td>\n",
-       "      <td>skinny_jeans</td>\n",
-       "      <td>24.99</td>\n",
-       "      <td>2021-09-30 09:51:16</td>\n",
-       "      <td>720504</td>\n",
-       "      <td>13</td>\n",
-       "      <td>light_blue</td>\n",
-       "      <td>skinny_fit</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.73</td>\n",
-       "      <td>0.26</td>\n",
+       "      <td>0.99</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.01</td>\n",
-       "      <td>0.00</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>136</th>\n",
+       "      <th>169</th>\n",
+       "      <td>811993036</td>\n",
+       "      <td>men_jeans_regular</td>\n",
+       "      <td>regular_jeans</td>\n",
+       "      <td>29.99</td>\n",
+       "      <td>2021-09-30 09:51:16</td>\n",
+       "      <td>811993</td>\n",
+       "      <td>36</td>\n",
+       "      <td>cream</td>\n",
+       "      <td>regular_fit</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.99</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>215</th>\n",
+       "      <td>811993024</td>\n",
+       "      <td>men_jeans_regular</td>\n",
+       "      <td>regular_jeans</td>\n",
+       "      <td>29.99</td>\n",
+       "      <td>2021-09-30 09:51:16</td>\n",
+       "      <td>811993</td>\n",
+       "      <td>24</td>\n",
+       "      <td>black</td>\n",
+       "      <td>regular_fit</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.99</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>145</th>\n",
        "      <td>730863033</td>\n",
        "      <td>men_jeans_skinny</td>\n",
        "      <td>skinny_jeans</td>\n",
@@ -228,35 +244,17 @@
        "      <td>2021-09-30 09:51:16</td>\n",
        "      <td>730863</td>\n",
        "      <td>33</td>\n",
-       "      <td>graphite_gray</td>\n",
+       "      <td>black_washed_out</td>\n",
+       "      <td>skinny_fit</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
+       "      <td>0.99</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>411</th>\n",
-       "      <td>751994018</td>\n",
-       "      <td>men_jeans_slim</td>\n",
-       "      <td>slim_jeans</td>\n",
-       "      <td>29.99</td>\n",
-       "      <td>2021-09-30 09:51:16</td>\n",
-       "      <td>751994</td>\n",
-       "      <td>18</td>\n",
-       "      <td>black_denim</td>\n",
-       "      <td>slim_fit</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.98</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.02</td>\n",
-       "      <td>0.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <th>7</th>\n",
        "      <td>690449022</td>\n",
        "      <td>men_jeans_ripped</td>\n",
        "      <td>skinny_jeans</td>\n",
@@ -264,166 +262,60 @@
        "      <td>2021-09-30 09:51:16</td>\n",
        "      <td>690449</td>\n",
        "      <td>22</td>\n",
-       "      <td>denim_blue</td>\n",
+       "      <td>black_trashed</td>\n",
        "      <td>skinny_fit</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>0.98</td>\n",
-       "      <td>0.00</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.02</td>\n",
-       "      <td>0.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>109</th>\n",
-       "      <td>814631006</td>\n",
-       "      <td>men_jeans_slim</td>\n",
-       "      <td>freefit®_slim_jeans</td>\n",
-       "      <td>49.99</td>\n",
-       "      <td>2021-09-30 09:51:16</td>\n",
-       "      <td>814631</td>\n",
-       "      <td>6</td>\n",
-       "      <td>gray</td>\n",
-       "      <td>slim_fit</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.90</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.02</td>\n",
-       "      <td>0.08</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>207</th>\n",
-       "      <td>814631002</td>\n",
-       "      <td>men_jeans_slim</td>\n",
-       "      <td>freefit®_slim_jeans</td>\n",
-       "      <td>49.99</td>\n",
-       "      <td>2021-09-30 09:51:16</td>\n",
-       "      <td>814631</td>\n",
-       "      <td>2</td>\n",
-       "      <td>black_no_fade_black</td>\n",
-       "      <td>slim_fit</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.90</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.02</td>\n",
-       "      <td>0.08</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>280</th>\n",
-       "      <td>730863005</td>\n",
-       "      <td>men_jeans_skinny</td>\n",
-       "      <td>skinny_jeans</td>\n",
-       "      <td>29.99</td>\n",
-       "      <td>2021-09-30 09:51:16</td>\n",
-       "      <td>730863</td>\n",
-       "      <td>5</td>\n",
-       "      <td>dark_blue</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>92</th>\n",
-       "      <td>1004476002</td>\n",
-       "      <td>men_jeans_slim</td>\n",
-       "      <td>freefit®_slim_jeans</td>\n",
-       "      <td>49.99</td>\n",
-       "      <td>2021-09-30 09:51:16</td>\n",
-       "      <td>1004476</td>\n",
-       "      <td>2</td>\n",
-       "      <td>light_denim_blue</td>\n",
-       "      <td>slim_fit</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.90</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.02</td>\n",
-       "      <td>0.08</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>690449043</td>\n",
-       "      <td>men_jeans_ripped</td>\n",
-       "      <td>skinny_jeans</td>\n",
-       "      <td>39.99</td>\n",
-       "      <td>2021-09-30 09:51:16</td>\n",
-       "      <td>690449</td>\n",
-       "      <td>43</td>\n",
-       "      <td>denim_blue</td>\n",
-       "      <td>skinny_fit</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.98</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.02</td>\n",
-       "      <td>0.00</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     product_id  product_category         product_name  product_price  \\\n",
-       "180   751994024    men_jeans_slim           slim_jeans          29.99   \n",
-       "390   720504013  men_jeans_skinny         skinny_jeans          24.99   \n",
-       "136   730863033  men_jeans_skinny         skinny_jeans          29.99   \n",
-       "411   751994018    men_jeans_slim           slim_jeans          29.99   \n",
-       "1     690449022  men_jeans_ripped         skinny_jeans          39.99   \n",
-       "109   814631006    men_jeans_slim  freefit®_slim_jeans          49.99   \n",
-       "207   814631002    men_jeans_slim  freefit®_slim_jeans          49.99   \n",
-       "280   730863005  men_jeans_skinny         skinny_jeans          29.99   \n",
-       "92   1004476002    men_jeans_slim  freefit®_slim_jeans          49.99   \n",
-       "16    690449043  men_jeans_ripped         skinny_jeans          39.99   \n",
+       "     product_id   product_category   product_name  product_price  \\\n",
+       "221   811993024  men_jeans_regular  regular_jeans          29.99   \n",
+       "169   811993036  men_jeans_regular  regular_jeans          29.99   \n",
+       "215   811993024  men_jeans_regular  regular_jeans          29.99   \n",
+       "145   730863033   men_jeans_skinny   skinny_jeans          29.99   \n",
+       "7     690449022   men_jeans_ripped   skinny_jeans          39.99   \n",
        "\n",
-       "        scrapy_datetime  style_code  color_id           color_name  \\\n",
-       "180 2021-09-30 09:51:16      751994        24           light_gray   \n",
-       "390 2021-09-30 09:51:16      720504        13           light_blue   \n",
-       "136 2021-09-30 09:51:16      730863        33        graphite_gray   \n",
-       "411 2021-09-30 09:51:16      751994        18          black_denim   \n",
-       "1   2021-09-30 09:51:16      690449        22           denim_blue   \n",
-       "109 2021-09-30 09:51:16      814631         6                 gray   \n",
-       "207 2021-09-30 09:51:16      814631         2  black_no_fade_black   \n",
-       "280 2021-09-30 09:51:16      730863         5            dark_blue   \n",
-       "92  2021-09-30 09:51:16     1004476         2     light_denim_blue   \n",
-       "16  2021-09-30 09:51:16      690449        43           denim_blue   \n",
+       "        scrapy_datetime  style_code  color_id        color_name          fit  \\\n",
+       "221 2021-09-30 09:51:16      811993        24         dark_blue  regular_fit   \n",
+       "169 2021-09-30 09:51:16      811993        36             cream  regular_fit   \n",
+       "215 2021-09-30 09:51:16      811993        24             black  regular_fit   \n",
+       "145 2021-09-30 09:51:16      730863        33  black_washed_out   skinny_fit   \n",
+       "7   2021-09-30 09:51:16      690449        22     black_trashed   skinny_fit   \n",
        "\n",
-       "            fit size_model size_number  cotton  polyester  elastane  \\\n",
-       "180    slim_fit        NaN         NaN    0.98       0.00      0.02   \n",
-       "390  skinny_fit        NaN         NaN    0.73       0.26      0.01   \n",
-       "136         NaN        NaN         NaN    0.00       0.00      0.00   \n",
-       "411    slim_fit        NaN         NaN    0.98       0.00      0.02   \n",
-       "1    skinny_fit        NaN         NaN    0.98       0.00      0.02   \n",
-       "109    slim_fit        NaN         NaN    0.90       0.00      0.02   \n",
-       "207    slim_fit        NaN         NaN    0.90       0.00      0.02   \n",
-       "280         NaN        NaN         NaN    0.00       0.00      0.00   \n",
-       "92     slim_fit        NaN         NaN    0.90       0.00      0.02   \n",
-       "16   skinny_fit        NaN         NaN    0.98       0.00      0.02   \n",
-       "\n",
-       "     elasterell  \n",
-       "180        0.00  \n",
-       "390        0.00  \n",
-       "136        0.00  \n",
-       "411        0.00  \n",
-       "1          0.00  \n",
-       "109        0.08  \n",
-       "207        0.08  \n",
-       "280        0.00  \n",
-       "92         0.08  \n",
-       "16         0.00  "
+       "    size_model size_number  cotton  polyester  elastane  elasterell  \n",
+       "221        NaN         NaN    0.99        0.0      0.01         0.0  \n",
+       "169        NaN         NaN    0.99        0.0      0.01         0.0  \n",
+       "215        NaN         NaN    0.99        0.0      0.01         0.0  \n",
+       "145        NaN         NaN    0.99        0.0      0.01         0.0  \n",
+       "7          NaN         NaN    0.98        0.0      0.02         0.0  "
       ]
      },
-     "execution_count": 72,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data_raw.sample(10)"
+    "data_raw.sample(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "652b6b79-6304-4789-a5f1-b57cfa0bc6db",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save final DataSet\n",
+    "data_raw.to_csv('../datasets/products_HM_cleaned.csv', index = False)"
    ]
   }
  ],
