ETL design in progress

--- a/notebooks/1.0_ego_c05_ETL_design.ipynb
+++ b/notebooks/1.0_ego_c05_ETL_design.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "ae6d0db0-4c7b-4ded-b92a-9319dde7ad8d",
    "metadata": {},
    "outputs": [],
@@ -21,8 +21,9 @@
     "import pandas as pd\n",
     "import numpy  as np\n",
     "\n",
-    "from datetime import datetime\n",
-    "from bs4      import BeautifulSoup"
+    "from datetime        import datetime\n",
+    "from bs4             import BeautifulSoup\n",
+    "from IPython.display import Image"
    ]
   },
   {
@@ -827,14 +828,6 @@
    "metadata": {},
    "source": [
     "### **4.0 ETL Planning**"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "9dc98ca9-6606-47df-85bc-dd80820fd8a1",
-   "metadata": {},
-   "source": [
-    "![ETL](img/ETL_design.png)"
    ]
   },
   {
