--- a/notebooks/1.0_ego_c07_data_analysis.ipynb
+++ b/notebooks/1.0_ego_c07_data_analysis.ipynb
@@ -30,14 +30,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 1,
    "id": "24acc0b5-2664-4264-911a-7917de4d5a31",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import sqlite3\n",
     "from sqlalchemy import create_engine"
    ]
   },
@@ -51,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "id": "3d7a67ae-c51d-4f2f-b1b0-7cf4d319327e",
    "metadata": {},
    "outputs": [],
@@ -63,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "id": "93907d75-a431-48cb-acea-c00399d8b4a6",
    "metadata": {},
    "outputs": [],
@@ -75,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "id": "8b5020e1-68d0-44fc-bc88-b3a06c988386",
    "metadata": {},
    "outputs": [],
@@ -95,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "id": "2233e0b0-c281-4a99-b7d6-54f024a87625",
    "metadata": {},
    "outputs": [],
@@ -115,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 6,
    "id": "c48a1c77-5082-450c-be64-0a4a859e339f",
    "metadata": {},
    "outputs": [
@@ -145,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 7,
    "id": "fa3f961d-a722-4bb0-aac8-bda7a1294435",
    "metadata": {},
    "outputs": [
@@ -169,7 +168,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,13 +179,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 8,
    "id": "18cbb333-d2a9-420c-96d0-bf1957110b26",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Convert object to datetime\n",
     "df01['scrapy_datetime'] = pd.to_datetime(df01['scrapy_datetime'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "ef3ad6fa-3269-4fe4-8a79-c8d04edbf880",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "product_id                 object\n",
+       "style_id                   object\n",
+       "color_id                   object\n",
+       "product_name               object\n",
+       "color_name                 object\n",
+       "fit                        object\n",
+       "product_price             float64\n",
+       "size_number                object\n",
+       "size_model                 object\n",
+       "cotton                    float64\n",
+       "polyester                 float64\n",
+       "elastane                  float64\n",
+       "elasterell                float64\n",
+       "scrapy_datetime    datetime64[ns]\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df01.dtypes"
    ]
   },
   {
@@ -201,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 10,
    "id": "6f68a461-8aaa-4449-b32c-5b2055bde200",
    "metadata": {},
    "outputs": [
@@ -225,7 +259,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 11,
    "id": "8e51c1ef-6db7-40af-8706-504acf4aa2ce",
    "metadata": {},
    "outputs": [
@@ -260,7 +294,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -289,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 12,
    "id": "59f1a9d0-2f4a-472e-b6d9-874fbfd7348a",
    "metadata": {},
    "outputs": [],
@@ -309,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 13,
    "id": "2d739ee7-12ad-4378-801a-a84fbc2fe524",
    "metadata": {},
    "outputs": [],
@@ -328,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 14,
    "id": "544156d4-05e6-4290-8e64-bb34858f7341",
    "metadata": {},
    "outputs": [
@@ -445,7 +479,7 @@
        "4  9.705184  "
       ]
      },
-     "execution_count": 48,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -472,6 +506,172 @@
   {
    "cell_type": "markdown",
    "id": "a776dfac-0f79-4cea-858b-25a34d9dd96f",
+   "metadata": {},
+   "source": [
+    "##### **Minimum**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0bb49004-392a-4975-a645-cdd9da032112",
+   "metadata": {},
+   "source": [
+    "- Menor valor do conjunto de dados"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ba7b861a-956b-47d0-86cc-d6a861a54ceb",
+   "metadata": {},
+   "source": [
+    "##### **Maximum**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "46f13906-f5ca-4057-be6c-f7e8cafe4655",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "- Maior valor do conjunto de dados"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "31897b42-f23a-42f9-93aa-9dacf8231d4d",
+   "metadata": {},
+   "source": [
+    "##### **Range**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f5516cce-3a3f-4243-aaa3-cc3d42d99aff",
+   "metadata": {},
+   "source": [
+    "- Diferença entre o máximo e o mínimo. \n",
+    "- Um range maior implica em dados mais dispersos."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e4566cf5-b0ae-4c99-aff0-d922a70eebf9",
+   "metadata": {},
+   "source": [
+    "##### **Mean**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "733364c9-e1b9-4651-af3c-c75ff9f3c61f",
+   "metadata": {},
+   "source": [
+    "- Resumo de um conjunto de dados em um único ponto, o centro de uma nuvem de pontos. \n",
+    "- Soma de todos os valores dividido pela quantidade de valores. \n",
+    "- Sofre forte impacto dos outliers."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "79eca4a9-06eb-4978-9fa1-dbd532abedfc",
+   "metadata": {},
+   "source": [
+    "##### **Median**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4271eb11-79da-425f-8ebd-10c798a55d69",
+   "metadata": {},
+   "source": [
+    "- Número na posição central de uma lista ordenada. Quando o conjunto de dados tiver uma quantidade par de elementos, a mediana será a média entre os dois pontos centrais.\n",
+    "- Não sofre o impacto dos outliers, pois independe da grandeza dos valores."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "db6d267f-0b2c-46a4-8666-b65f2a4e8f10",
+   "metadata": {},
+   "source": [
+    "##### **Std**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d243b506-eee2-48ad-aa5e-a742eec4255a",
+   "metadata": {},
+   "source": [
+    "- Estimativa de variabilidade ou dispersão.\n",
+    "    - Mede os valores do conjunto de dados que estão próximos ou distantes em torno de um ponto central.\n",
+    "- Desvio: Diferença entre os valores observados e a estimativa de localização (média ou mediana). Mostra quão dispersos estão os dados em torno da média.\n",
+    "- Variância: É a soma dos desvios elevados ao quadrado, para tornar positivo os números negativos, divididos pelo número de valores do conjunto de dados menos 1 (n -1). D\n",
+    "- Desvio padrão: É a raíz quadrada da variância. A raiz faz com que o resultado volte para a escala original, após serem elevados ao quadrado para o cálculo da variância."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bbde8866-0916-4ec9-bf6c-3174415f0744",
+   "metadata": {},
+   "source": [
+    "##### **Skewness**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8e4ac1b5-922b-4af7-bd8a-5d0302a70547",
+   "metadata": {},
+   "source": [
+    "- É a medida de quanto a distribuição dos dados está assimétrica em relação ao centro, à média.\n",
+    "- A distribuição \"normal\" não possui skewness (skewness = 0)\n",
+    "- Skewness positiva:\n",
+    "     - Se a mediana é menor que a média, há um deslocamento de dados para a esquerda, portanto a skewness será positiva.\n",
+    "- Skewness 0: \n",
+    "    - Se a média é igual a mediana, não há deslocamento dos dados, é uma distribuição \"normal\".\n",
+    "- Skewness negativa:\n",
+    "    - Se a mediana é maior que a média, há um deslocamento de dados para a direita, portanto a skewness será negativa.\n",
+    "    \n",
+    "- Interpretação:\n",
+    "    - A skewness mostra a concentração dos dados de um lado da média.\n",
+    "    - Algoritmos de ML precisam treinar com dados não enviesados, ou seja, a distribuição da variável resposta (alvo) precisa ser o mais próximo de uma distribuição normal."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "378247ef-4edd-4435-8e3f-f560ff0cdcd6",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "##### **Kurtosis**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dfc96266-d088-483d-b551-0cb22b75262c",
+   "metadata": {},
+   "source": [
+    "- Descreve a distribuição dos dados em torno da média.\n",
+    "- Evidencia uma distribuição de caudas longas (probabilidade de acontecer valores extremos).\n",
+    "- Kurtosis alta significa grande concentração ao redor da média, situação ruim pois os modelos podem aprender apenas valores próximos da média e ignorar outros acontecimentos."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ec873753-45fc-4faf-8056-c4347951f6d3",
+   "metadata": {},
+   "source": [
+    "#### **Momentos da estística:**\n",
+    "\n",
+    "- Momento 1: Estimativa de localização (Média ou Mediana)\n",
+    "- Momento 2: Estimativa de Variabilidade (Desvios, Variância, Desvio Padrão, Intervalo)\n",
+    "- Momento 3: Skewness (Assimetria da distribuição dos dados em relação a média)\n",
+    "- Momento 4: Kurtosis (Evidência de caudas longas - probabilidade acontecerem valores extremos)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ea3a6e1f-220e-4c0f-b191-f98b096273c0",
    "metadata": {},
    "source": [
     "#### **1.5.2. Categorical Data**"
